--- a/src/loginout/Loginout.css
+++ b/src/loginout/Loginout.css
@@ -4,32 +4,60 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 500px;
+  width: 300px;
+  height: 450px;
 
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+}
+
+.loginoutTitle {
+  font-size: 24px;
 }
 
 .loginoutDiv {
   border: 1px solid gray;
 
   width: 100%;
+  height: 80%;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.loginoutForm {
+  width: 100%;
+  height: 180px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.idInput,
+.passwordInput,
+.submitInput {
+  border: 1px solid gray;
+
+  width: 70%;
+  height: 20px;
+
+  margin: 3px;
 }
 
 .signinDiv {
   border: 1px solid gray;
 
   width: 100%;
+  height: 15%;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
