--- a/src/login/css/Home.css
+++ b/src/login/css/Home.css
@@ -1,9 +1,23 @@
-.homeOpacity * {
+.homeOpacity {
+  height: 0px;
+  width: 100%;
+
   opacity: "0.4";
 }
 
-.home * {
+.home {
+  position: fixed;
+
+  top: 0px;
+  left: 0px;
+
+  height: 0px;
+  width: 0px;
   opacity: "1";
+
+  z-index: 1;
+
+  background-color: transparent;
 }
 
 .HomeUserProfile {
