--- a/src/login/css/PostDetail.css
+++ b/src/login/css/PostDetail.css
@@ -1,3 +1,18 @@
+.opacitybackground {
+  position: fixed;
+
+  top: 0px;
+  left: 0px;
+
+  height: 100%;
+  width: 100%;
+  opacity: 0.7;
+
+  z-index: 1;
+
+  background-color: white;
+}
+
 .postDetailContainer {
   position: fixed;
 
@@ -12,6 +27,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+  z-index: 2;
 
   background-color: white;
 }
